Changed main title

--- a/templates/crimeTypes1.html
+++ b/templates/crimeTypes1.html
@@ -18,7 +18,7 @@
     </style>
     <body>
         <center>
-            <h1>Chicago Crime Details - Public Areas (Dec. 2004 - Dec. 2014)</h1>
+            <h1>Chicago Crime Details - Crime Types (Dec. 2004 - Dec. 2014)</h1>
             <h4><a href="/">Home</a></h4>
             <br>
             <h4><a href="/crime">Crimes in Public Areas</a> | <a href = "/crimeResidential">Crimes in Residential Areas</a> | <a href = "/crimeStores">Crimes in Stores and Restaurants</a></h4>
