--- a/templates/crimeStores.html
+++ b/templates/crimeStores.html
@@ -19,7 +19,13 @@
     <body>
         <center>
             <h1>Chicago Crime Details - Stores and Restaurants (Dec. 2004 - Dec. 2014)</h1>
-            <h4><a href="/">Home</a> | <a href="/crime">Crimes in Public Areas</a> | <a href = "/crimeResidential">Crimes in Residential Areas</a> | <a href = "/crimeStores">Crimes in Stores and Restaurants</a></h4>
+            <h4><a href="/">Home</a></h4>
+            <br>
+            <h4><a href="/crime">Crimes in Public Areas</a> | <a href = "/crimeResidential">Crimes in Residential Areas</a> | <a href = "/crimeStores">Crimes in Stores and Restaurants</a></h4>
+            <br>
+            <h4>Types of Crime: <a href="/crimeTypes1">Page 1</a> | <a href = "/crimeTypes2">Page 2</a> | <a href = "/crimeTypes3">Page 3</a> | <a href = "/crimeTypes4">Page 4</a></h4>
+            <br>
+            <h4><a href="/crimeTotal">Total Number of Crimes</a></h4>
         </center>
 
 
